syntax = "proto3";

import "Protos/shared.proto";

package vera.grpc;

service UserRegisterService {
    rpc RegisterUser (RegisterUserRequest) returns (vera.grpc.shared.Empty);
}

message RegisterUserRequest {
    string companyName = 1;
    string username = 2;
    string password = 3;
}
